# triglav

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  conanfile.py  engine.yaml  format-project.sh  meson.build  meson.options  performance.md  project.json  resource_list.yaml
fonts/: cantarell_18.yaml  cantarell_20.yaml  cantarell_24.yaml  cantarell_bold_24.yaml  meson.build  segoeui_18.yaml  segoeui_bold_20.yaml
game/demo/: meson.build  project.json
game/demo/content/: convert.sh  index.yaml  index_base.yaml  ray_tracing.yaml
game/demo/content/animation/: animated_cubeaction.anim  armatureaction.anim  cube_armature_animation.anim  example.anim  simple_human_walk.anim
game/demo/content/armature/: armature.arm  cube_armature.arm  simple_human_rig.arm
game/demo/content/fonts/: cantarell_bold_24.yaml
game/demo/content/level/: animated_example.level  basic_bones.level  dancing_cube.level  demo.copy.yaml  demo.level  demo.yaml  example.level  simple_animated_human.level  table.level  wierd_tube.level
game/demo/content/material/: animated_material.mat  bark.mat  bark.yaml  brick.mat  gold.mat  gold.yaml  grass.mat  grass.yaml  leaves.mat  leaves.yaml  metal.mat  metal.yaml  mirror.yaml  pine.mat  pine.yaml  quartz.mat  simple_human_mat.mat  stone.mat  stone.yaml  table_wood.mat  tubemtl.mat  white_floor.mat  white_wall.mat
game/demo/content/mesh/: animated_cube.mesh  arrow.mesh  ball.mesh  bunny.mesh  cage.mesh  column.mesh  cone.mesh  cube.mesh  dancing_cube.mesh  example.mesh  floor.mesh  hall.mesh  pine.mesh  simple_human.mesh  simple_human_anim_floor.mesh  sphere.mesh  stone_1.mesh  stone_2.mesh  table.mesh  teapot.mesh  terrain.mesh  tree.mesh  wall.mesh  wall1.mesh  wall2.mesh  wierdtube.mesh
game/demo/content/model/: ball.mesh  bunny.mesh  cage.mesh  column.mesh  example.glb  example.mesh  hall.mesh  mirror.mesh  mirror.mtl  pine.mesh  stairs.mesh  teapot.mesh  terrain.mesh  tree.mesh  wall.mesh
game/demo/content/raw/: arrow.glb  arrow.mtl  debug.ktx
game/demo/content/texture/: bark.tex  bark_normal.tex  board.tex  brick_albedo.tex  brick_height_map.tex  brick_normal.tex  (+24 more)
game/demo/src/: CharacterController.cpp  CharacterController.hpp  GameInstance.cpp  GameInstance.h  GameInstance.hpp  Main.cpp  SplashScreen.cpp  SplashScreen.h  SplashScreen.hpp
game/linux_wayland/: CMakeLists.txt  meson.build
game/linux_wayland/src/: CMakeLists.txt  Main.cpp
material/: bark.yaml  brick.yaml  gold.yaml  grass.yaml  leaves.yaml  meson.build  metal.yaml  pine.yaml  quartz.yaml  stone.yaml
material/template/: brdf_normal_map.yaml  brdf_simple.yaml  meson.build  pbr_full.yaml  pbr_normal_map.yaml  pbr_simple.yaml
model/: ball.mtl  cage.mtl  column.mtl  cube.mtl  glass.blend  glass.mtl  hall.mtl  house.mtl  meson.build  pine.mtl  stairs.mtl  teapot.mtl  terrain.mtl  tree.mtl  wall.mtl
shader/: example_fragment.glsl  example_fragment.spv  example_vertex.glsl  example_vertex.spv  meson.build  new_layout
shader/ambient_occlusion/: ambient_occlusion.slang  fragment.glsl  meson.build  vertex.glsl
shader/bindless_geometry/: animation.slang  bindless_geometry.slang  culling.slang  depth_prepass.slang  generate_draw_calls.slang  hi_zbuffer_construct.slang  matrix_multiply.slang  meson.build  passthrough.slang  render_geometry.slang  shadow_map.slang  transform_to_matrix.slang
shader/bindless_geometry/material/: material.slang  material_core.slang  mt_albedo_normal_texture.slang  mt_albedo_texture.slang  mt_all_texture.slang  mt_solid_color.slang  texture_bindings.slang
shader/bindless_geometry/mesh/: mesh.slang
shader/blur/: compute.glsl  gauss_coefs.slang  meson.build
shader/brdf_normal_map/: meson.build
shader/brdf_simple/: fragment.glsl  meson.build
shader/common/: blur.glsl  brdf.glsl  brdf.slang  common.slang  constants.glsl  constants.slang  random.glsl  random.slang  shadow_map.glsl  shadow_map.slang  util.glsl  view_properties.slang
shader/debug_lines/: fragment.glsl  meson.build  vertex.glsl
shader/editor/: meson.build  object_selection.slang
shader/geometry/: ground.slang  meson.build  skybox.slang
shader/ground/: fragment.glsl  fragment.spv  ground.slang  meson.build  vertex.glsl  vertex.spv
shader/misc/: blur.slang  full_screen.slang  full_screen_vs.slang  meson.build
shader/model/: fragment.glsl  material.yaml  meson.build  vertex.glsl
shader/particles/: compute.glsl  fragment.glsl  meson.build  particle.glsl  particle.slang  render.slang  update_position.slang  vertex.glsl
shader/pass/: ambient_occlusion.slang  meson.build  post_processing.slang  shading.slang
shader/pbr_full/: fragment.glsl  meson.build
shader/pbr_normal_map/: fragment.glsl  meson.build
shader/pbr_parallax/: fragment.glsl  meson.build  vertex.glsl
shader/pbr_simple/: meson.build  vertex.glsl
shader/post_processing/: fragment.glsl  meson.build  post_processing.slang  vertex.fx  vertex.spv
shader/ray_tracing/: ambient_occlusion.slang  closest_hit.glsl  common.glsl  general.slang  meson.build  miss.glsl  ray_generation.glsl  ray_generation.slang  ray_payload.slang  ray_tracing.slang  shadow.slang  shadow_closest_hit.glsl  shadow_miss.glsl
shader/rectangle/: fragment.glsl  meson.build  vertex.glsl
shader/shading/: fragment.glsl  meson.build  shading.slang
shader/shadow_map/: fragment.glsl  meson.build  vertex.glsl
shader/skybox/: fragment.glsl  fragment.spv  meson.build  skybox.slang  vertex.glsl  vertex.spv
shader/sprite/: fragment.glsl  meson.build  vertex.glsl
shader/ssr/: fragment.glsl  meson.build  vertex.glsl
shader/terrain/: domain.slang  fragment.slang  hull.slang  meson.build  vertex.slang
shader/text/: compute.glsl  fragment.glsl  meson.build  vertex.glsl
shader/ui/: meson.build  rectangle.slang  rectangle_api.slang  rectangle_insertion.slang  rectangle_removal.slang  rectangle_render.slang  sprite.slang  sprite_api.slang  sprite_insertion.slang  sprite_removal.slang  sprite_render.slang  text_geometry_gen.slang  text_processing.slang  text_removal.slang  text_render.slang
texture/: meson.build
(+111 files in other folders)
